expose configured review vocab via front end
